# saga-cpp-adaptor-condor

./: CHANGES  INSTALL  Makefile  PACKAGE  README  README.md  configure  configure.in  webpage.wiki
condor_job/: INFO  Makefile  classad.hpp  condor_job.cpp  condor_job.hpp  condor_job_adaptor.cpp  condor_job_adaptor.hpp  condor_job_adaptor.ini.in  condor_job_service.cpp  condor_job_service.hpp  description.hpp  helper.hpp  job_registry.cpp  job_registry.hpp  log_processor.cpp  log_processor.hpp  mappings.ini  pool_data.cpp  pool_data.hpp  shared_job_data.hpp  status.hpp  synchronized.hpp  tail_reader.hpp  temporary.cpp  temporary.hpp
condor_job/test/: .saga.ini  Makefile  classad.cpp  condor-demo.cpp  log-processor.cpp  registry-asserts.cpp  safe_getenv.hpp  saga-condor-log.classad  temporary.cpp
config/: Makefile  make.cfg.in  saga_condor.m4
examples/job/: x509_example.cpp
