# Copyright (c) 2005-2007 Andre Merzky (andre@merzky.net)
# Copyright (c)      2008 Ole Weidner (oweidner@cct.lsu.ed)
#
# Distributed under the Boost Software License, Version 1.0.
# (See accompanying Afile LICENSE_1_0.txt or copy at
#  http://www.boost.org/LICENSE_1_0.txt)

# find saga.m4

m4_include([saga.m4])
m4_include([config/saga_condor.m4])

AC_INIT()

AX_SAGA_CONFIG()

AX_SAGA_CHECK_CONDOR()

BUILD_ADAPTOR_JOB=no

if test "x$SAGA_HAVE_PACKAGE_JOB-$SAGA_HAVE_CONDOR" = "xyes-yes"; then
  BUILD_ADAPTOR_JOB="yes"
fi

AC_SUBST([BUILD_ADAPTOR_JOB])

# create output files
AC_CONFIG_FILES([config/make.cfg])
AC_CONFIG_FILES([condor_job/condor_job_adaptor.ini])

SAGA_CONFIGURE_OK=yes
if ! test "$HAVE_SAGA"        = "yes"; then SAGA_CONFIGURE_OK=no; fi
if ! test "$SAGA_HAVE_CONDOR" = "yes"; then SAGA_CONFIGURE_OK=no; fi
AC_SUBST([SAGA_CONFIGURE_OK])

AC_OUTPUT()

OUT=config.summary
rm -f $OUT
touch $OUT

echo "                                                                 " >> $OUT
echo " ========================================================        " >> $OUT
echo " SAGA CONDOR ADAPTORS - Configuration Summary                    " >> $OUT
echo " --------------------------------------------------------        " >> $OUT
echo "                                                                 " >> $OUT
echo " Using SAGA from       : $SAGA_LOCATION                          " >> $OUT
echo "       SAGA version    : $SAGA_VERSION                           " >> $OUT
echo "                                                                 " >> $OUT
echo " Adaptor Version       : $SAGA_PACKAGE_VERSION                   " >> $OUT
echo " Adaptor Revision      : $SAGA_PACKAGE_REVISION                  " >> $OUT
echo "                                                                 " >> $OUT
echo " Condor Found          : $SAGA_HAVE_CONDOR                       " >> $OUT
echo " Condor Version        : $CONDOR_VERSION                         " >> $OUT
echo " Condor Location       : $CONDOR_LOCATION                        " >> $OUT
echo " Condor Config         : $CONDOR_CONFIG                          " >> $OUT
echo " Condor Path           : $CONDOR_PATH                            " >> $OUT
echo "                                                                 " >> $OUT
echo " Job Adaptor           : $BUILD_ADAPTOR_JOB                      " >> $OUT
echo "                                                                 " >> $OUT
echo " --------------------------------------------------------        " >> $OUT
echo "                                                                 " >> $OUT

cat $OUT

